fix(@clayui/css): Atlas Alerts use `$alert-indicator-font-size` instead of `$alert-font-size` when calculating spacing for the `.alert-indicator`

--- a/packages/clay-css/src/scss/atlas/variables/_alerts.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_alerts.scss
@@ -95,15 +95,19 @@ $alert-notification: map-merge(
 $alert-indicator-start: () !default;
 $alert-indicator-start: map-deep-merge(
 	(
-		padding-left: calc(#{$alert-font-size} + #{$alert-padding-x} + 0.5rem),
+		padding-left:
+			calc(#{$alert-indicator-font-size} + #{$alert-padding-x} + 0.5rem),
 		alert-fluid: (
 			container-fluid: (
 				padding-left:
-					calc(#{$alert-font-size} + #{$alert-padding-x} + 0.5rem),
+					calc(
+						#{$alert-indicator-font-size} + #{$alert-padding-x} +
+							0.5rem
+					),
 			),
 		),
 		alert-feedback: (
-			padding-left: calc(#{$alert-font-size} + 0.5rem),
+			padding-left: calc(#{$alert-indicator-font-size} + 0.5rem),
 		),
 		alert-indicator: (
 			margin-left: calc(-1em - 0.5rem),
